[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
eframe = { version = "0.26.2", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui_extras = { version = "0.26.2", features = ["image"]}
env_logger = "0.11.2"
image = { version = "0.24.8", features = ["png"] }
log = "0.4.20"
serde = { version = "1.0.130", features = ["derive"] }
single_value_channel = "1.2.2"
toml = "0.8.10"
uuid = { version = "1.7.0", features = ["v4"] }
